test/canary/kustomization.yaml

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - namespace.yaml
  - sidecar.yaml
  - fortio.yaml
  - fortio-cli.yaml

namespace: fortio-canary
