test/canary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortio-canary

  labels:
    #istio-env: istio-system-canary
    istio-injected: "true"
